# ZetaPay

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  README.md  drizzle.config.ts  eslint.config.mjs  knip.json  package.json  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd-deploy.yml  ci-circuits.yml  ci-contracts.yml  ci-frontend.yml  ci.yml  codeql.yml  maintenance.yml  release.yml  security.yml
contracts/: Cargo.toml
contracts/zetapay-payroll/: Cargo.toml
contracts/zetapay-pool/: Cargo.toml
contracts/zetapay-pool/src/: contract.rs  error.rs  fixtures.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/zetapay-pool/test_snapshots/test/: deposit_note_rejects_duplicate_commitment.1.json  fund_payroll_allows_withdrawal_after_single_funding_call.1.json  fund_payroll_posts_root_and_deposits_note_in_one_call.1.json  fund_payroll_rejects_duplicate_commitment.1.json  withdraw_rejects_double_spend_with_real_nullifier.1.json  withdraw_rejects_unknown_root_before_verifier.1.json  withdraw_with_real_groth16_proof_transfers_funds_and_spends_nullifier.1.json
contracts/zetapay-verifier/: Cargo.toml
deploy/: README.md
deploy/environments/: development.env.example  production.env.example  staging.env.example
docs/: production-readiness-report.md
docs/ci-cd/: README.md  deployment.md  release-process.md  secrets.md  troubleshooting.md  workflows.md
drizzle/migrations/: 0000_woozy_hulk.sql
public/: site.webmanifest
scripts/ci/: check-lockfile.sh  fail-on-high-npm-audit.mjs  (+1 more)
src/: proxy.ts
(+182 files in other folders)
